# quis-slack-logger

./: .gitignore  GITHUB_SETUP.md  INSTALLATION.md  README.md  SETUP_COMPLETE.md  TEAM_SETUP.md  example.py  pyproject.toml  requirements-example.txt  requirements.txt  setup-github.sh  setup.py
.github/workflows/: ci.yml.example
slack_logger/: __init__.py  client.py  config.py  formatter.py  logger.py
